--- a/vignettes/tidymass_install.Rmd
+++ b/vignettes/tidymass_install.Rmd
@@ -27,20 +27,72 @@ knitr::opts_chunk$set(
 )
 ```
 
-# **Install tidymass from github**
+## **Install tidymass from github**
 
 You can just use the `devtools` or `remote` to install `tidymass`. 
 
+Please update `devtools` first and then restart your r session.
 
 ```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-if(!require(devtools)){
 install.packages("devtools")
-}
-devtools::install_github("tidymass/tidymass")
 ```
 
-# **Data preparation**
+Then install `tidymass`:
 
-```{r,eval=TRUE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
+```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
+devtools::install_github("tidymass/tidymass", dependencies = TRUE)
 ```
 
+In the installation, it will ask if you want to update some packages for few times, just enter `enter` key to skip it.
+
+If there is a error like below:
+
+```
+Error: Failed to install 'tidymass' from GitHub: HTTP error 403. API rate limit exceeded for 171.66.10.237. (But here's the good news: Authenticated requests get a higher rate limit. Check out the documentation for more details.)
+```
+
+Try to resolve it by:
+
+1. In you R console, type this code:
+
+```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
+usethis::create_github_token()
+```
+
+It will open a page in browser, and create a "New personal access token" and copy it.
+
+![](../man/figures/Screen Shot 2021-12-24 at 9.28.18 PM.png)
+
+2. Then type this code:
+
+```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
+usethis::edit_r_environ()
+```
+
+and then add one line like below:
+
+```
+GITHUB_PAT=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
+```
+> The `GITHUB_PAT` should be yours that is created in step 1.
+
+And then restart R session and try again.
+
+
+## **Install tidymass packages one by one**
+
+If you use the windoes os and the dependencies can not be installed, try to install all the `tidymass` packages one by one.
+
+```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
+devtools::install_github("tidymass/tinytools", dependencies = TRUE)
+devtools::install_github("tidymass/massdataset", dependencies = TRUE)
+devtools::install_github("tidymass/demodata", dependencies = TRUE)
+devtools::install_github("tidymass/massqc", dependencies = TRUE)
+devtools::install_github("tidymass/massprocesser", dependencies = TRUE)
+devtools::install_github("tidymass/masscleaner", dependencies = TRUE)
+devtools::install_github("tidymass/massstat", dependencies = TRUE)
+devtools::install_github("tidymass/metid", dependencies = TRUE)
+devtools::install_github("tidymass/metpath", dependencies = TRUE)
+```
+
+[Let me know if you have any questions](shenxt1990@outlook.com).
