--- a/vignettes/contact_us.Rmd
+++ b/vignettes/contact_us.Rmd
@@ -63,5 +63,11 @@ leaflet::leaflet(width = "100%") %>%
   )
 ```
 
+# **Session information**
+
+```{r,eval=TRUE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
+sessionInfo()
+```
+
 
 
