--- a/vignettes/more_software.Rmd
+++ b/vignettes/more_software.Rmd
@@ -32,3 +32,9 @@ knitr::opts_chunk$set(
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
 ```
 
+# **Session information**
+
+```{r,eval=TRUE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
+sessionInfo()
+```
+
