--- a/vignettes/data_convert.Rmd
+++ b/vignettes/data_convert.Rmd
@@ -27,12 +27,19 @@ knitr::opts_chunk$set(
 )
 ```
 
+---
+
 # **Data preparation**
+
+---
 
 Please place the raw data in one folder according to MS1 and MS2.
 
+---
 
-# **Convert data using Proteowizard**
+# **Proteowizard**
+
+---
 
 ## Convert MS1 data to `mzXML` format data
 
@@ -47,7 +54,11 @@ Just convert data into `mzXML` or `mgf` format data according to the parameters 
 
 ![](../man/figures/Screen Shot 2022-01-13 at 12.09.12 AM.png)
 
+---
+
 # **Convert data using `massconverter`**
+
+---
 
 `massconverter` is a pacakge in `tidymass` which can be used to convert mass spectrometry raw data based on docker image of pwid. See more information [here](https://tidymass.github.io/massconverter/).
 
@@ -59,7 +70,11 @@ Download the data and put them your working directory and uncompress it.
 
 ## Convert data to `mgf` format data
 
+---
+
 # **Session information**
+
+---
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
 sessionInfo()
