--- a/vignettes/demo_data.Rmd
+++ b/vignettes/demo_data.Rmd
@@ -27,34 +27,82 @@ knitr::opts_chunk$set(
 )
 ```
 
+---
+
 # **Introduction**
 
-The demo data for tidymass is untargeted metabolomics by RPLC-QEplus (Thermo). 
+---
+
+The demo data for tidymass is untargeted metabolomics by RPLC-QEplus (Thermo).
+
+* Samples: 110 blood samples.
+
+* 
+
+---
 
 # **Download demo data**
 
-* [MS1 mzXML data](https://drive.google.com/file/d/1KUk0-PA77zV3UJsuUTEuAK6462yze8mm/view?usp=sharing).
+---
+
+## MS1 mzXML data
+
+[Download link](https://drive.google.com/file/d/1KUk0-PA77zV3UJsuUTEuAK6462yze8mm/view?usp=sharing).
 
 Download and uncompress:
 
 
 ![](figures/Screen-Shot-2022-01-13-at-10.33.07-PM.png)
 
+## MS2 mzXML data
 
-
-* [MS2 mzXML data](https://drive.google.com/file/d/1FY3x7q5i1g3oSLaVej__ZaZ4XSX-mWBQ/view?usp=sharing)
+[Download link](https://drive.google.com/file/d/1FY3x7q5i1g3oSLaVej__ZaZ4XSX-mWBQ/view?usp=sharing)
 
 Download and uncompress:
 
 ![](figures/Screen-Shot-2022-01-13-at-10.34.18-PM.png)
 
-* [Sample information](https://drive.google.com/file/d/1yyJeOMUhuMSTmPWfzKuFTCRfZ3zdhO6q/view?usp=sharing)
+## Sample information
+
+* [Download link](https://drive.google.com/file/d/1yyJeOMUhuMSTmPWfzKuFTCRfZ3zdhO6q/view?usp=sharing)
 
 Download and uncompress:
 
 ![](figures/Screen Shot-2022-01-13-at-10.35.54-PM.png)
 
+### `sample_info_pos`
+
+`sample_info_pos` is like below:
+
+```{r,eval=TRUE, echo=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
+sample_info_pos = readr::read_csv("sample_info/sample_info_pos.csv")
+library(kableExtra)
+library(magrittr)
+kbl(sample_info_pos) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"),
+                fixed_thead = TRUE) %>% 
+  scroll_box(width = "100%", height = "200px")
+```
+
+### `sample_info_neg`
+
+`sample_info_neg` is like below:
+
+```{r,eval=TRUE, echo=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
+sample_info_neg = readr::read_csv("sample_info/sample_info_neg.csv")
+library(kableExtra)
+library(magrittr)
+kbl(sample_info_neg) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"),
+                fixed_thead = TRUE) %>% 
+  scroll_box(width = "100%", height = "200px")
+```
+
+---
+
 # **Session information**
+
+---
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
 sessionInfo()
