--- a/vignettes/tidymass_install.Rmd
+++ b/vignettes/tidymass_install.Rmd
@@ -11,7 +11,7 @@ output:
     toc: no
 vignette: >
   %\VignetteIndexEntry{tidymass_install}
-  %\VignettePackage{massqc}
+  %\VignettePackage{tidymass}
   % \VignetteEngine{knitr::rmarkdown}
   % \usepackage[utf8]{inputenc}
   %\VignetteEncoding{UTF-8}
